--- a/DEMO/assets/css/index.css
+++ b/DEMO/assets/css/index.css
@@ -1,12 +1,9 @@
 <style>
     @font-face {
         font-family: 'SetoFont';
-        src: url('../fonts/setofont.woff') format("woff"),
-             url('../fonts/setofont.ttf') format("truetype"),
-             url('../fonts/setofont.eot') format("embedded-opentype"),
-             url('../fonts/setofont-ex.woff') format("woff"),
-             url('../fonts/setofont-ex.ttf') format("truetype"),
-             url('../fonts/setofont-ex.eot') format("embedded-opentype");
+        src: url(../fonts/setofont.woff) format("woff"),
+             url(../fonts/setofont.ttf) format("truetype"),
+             url(../fonts/setofont.eot) format("embedded-opentype");
     }
     html {
         height: 100%;
