--- a/DEMO/assets/css/index.css
+++ b/DEMO/assets/css/index.css
@@ -1,9 +1,9 @@
 <style>
     @font-face {
-        font-family: 'setofont';
-        src: url(../fonts/setofont.woff) format("woff"),
-             url(../fonts/setofont.ttf) format("truetype"),
-             url(../fonts/setofont.eot) format("embedded-opentype");
+        font-family: "setofont";
+        src:url(../fonts/setofont.ttf) format("truetype"), 
+            url(../fonts/setofont.woff) format("woff"),
+            url(../fonts/setofont.eot) format("embedded-opentype");
     }
     html {
         height: 100%;
@@ -15,7 +15,7 @@
         background-attachment: fixed;
         background-position: center;
         background-size: cover;
-        font-family: "setofont"
+        font-family: "setofont";
     }
     .container{
     	background-color: #FFFFFF;
