--- a/DEMO/assets/css/index.css
+++ b/DEMO/assets/css/index.css
@@ -15,7 +15,7 @@
         background-attachment: fixed;
         background-position: center;
         background-size: cover;
-        font-family: "setofont";
+        font-family: "setofont","微軟正黑體";
     }
     .container{
     	background-color: #FFFFFF;
