--- a/DEMO/assets/css/index.css
+++ b/DEMO/assets/css/index.css
@@ -43,9 +43,8 @@
 /* Set a background color */
 body {
   background-color:white;
-  font-family: Helvetica, sans-serif;
+  font-family: "setofont","微軟正黑體","Microsoft JhengHei";
 }
-
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
