--- a/DEMO/assets/css/index.css
+++ b/DEMO/assets/css/index.css
@@ -41,10 +41,10 @@
 }
 
 /* Set a background color */
-body {
+/*body {
   background-color:white;
   font-family: "setofont","微軟正黑體","Microsoft JhengHei";
-}
+}*/
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
