update 12/4 商品一覽 商品介面

--- a/TTTEEAAA/assets/css/style.css
+++ b/TTTEEAAA/assets/css/style.css
@@ -18,6 +18,8 @@ body {
     height: 50px;
 }
 
+
+
 /* 關於茶CSS */
 .A{
         position: center center;
@@ -78,6 +80,10 @@ body {
 }
 .textwidth{
     width: 90%;
+}
+.bcenter{
+  text-align: right;
+  padding: 10px;
 }
 /* 商品頁 商品 留言區css END */
 
