--- a/TTTEEAAA/assets/css/style.css
+++ b/TTTEEAAA/assets/css/style.css
@@ -222,5 +222,22 @@ body {
           filter: grayscale(100%);
 }
 /* 熱銷商品CSS END*/
-
+/*表單*/
+.hi1{
+	border-radius:25px;
+	background-color:yellow;
+	padding:30px 70px;
+	margin:2px 400px;
+	z-index:1;
+}
+.hi2{
+	border-radius:25px;
+	background-color:pink;
+	padding:20px 50px;
+	margin:1px 8px;
+	z-index:2;
+}
+.h1{
+	border-radius:25px;
+}
 
