--- a/TTTEEAAA/assets/css/style.css
+++ b/TTTEEAAA/assets/css/style.css
@@ -241,3 +241,37 @@ body {
 	border-radius:25px;
 }
 
+/* 48px 回到頂端*/
+.toTop-arrow {
+  width: 3rem;
+  height: 3rem;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 33%;
+  opacity: 0.6;
+  background: #000;
+  cursor: pointer;
+  position:fixed;
+  right: 1rem;
+  bottom: 1rem;
+  display: none;
+  z-index: 7;
+}
+.toTop-arrow::before, .toTop-arrow::after {
+  width: 25px;
+  height: 6px;
+  border-radius: 3px;
+  background: #86A697;
+  position: absolute;
+  content: "";
+}
+.toTop-arrow::before {
+  transform: rotate(-45deg) translate(0, -50%);
+  left: 0.42rem;
+}
+.toTop-arrow::after {
+  transform: rotate(45deg) translate(0, -50%);
+  right: 0.42rem;
+}
+.toTop-arrow:focus {outline: none;}
