--- a/TTTEEAAA/assets/css/style.css
+++ b/TTTEEAAA/assets/css/style.css
@@ -18,6 +18,13 @@ body {
     height: 50px;
 }
 
+.T{
+	background-color:#65b891;
+}
+.E{
+	background-color:#F5F3BB;
+  padding: 20px;
+}
 
 
 /* 關於茶CSS */
@@ -26,11 +33,11 @@ body {
         margin:40px 200px;
         padding:70px;
         border-radius:25px; 
-        background-color:#a8a3b1; 
+        background-color:#CEA07E; 
       }
 .B{ 
         position: center center;
-        background-color:#f7c4a5;
+        background-color:#EDD9A3;
         border-radius:25px; 
        }
 .tea1{
@@ -134,7 +141,7 @@ body {
   height: 100%;
 }
 .tl-item:after {
-  background: rgba(88, 178, 220, 0.85);
+  background: rgba(208, 227, 204, 0.85);
   opacity: 1;
   transition: opacity 0.5s ease;
 }
@@ -223,22 +230,17 @@ body {
 }
 /* 熱銷商品CSS END*/
 /*表單*/
-.hi1{
-	border-radius:25px;
-	background-color:yellow;
-	padding:30px 70px;
-	margin:2px 400px;
-	z-index:1;
-}
 .hi2{
 	border-radius:25px;
-	background-color:pink;
+	background-color:#E1AA7D;
 	padding:20px 50px;
 	margin:1px 8px;
-	z-index:2;
+	clear:both;
 }
-.h1{
-	border-radius:25px;
+
+
+.hi{
+	border-radius:13px 13px 15px 15px;
 }
 
 /* 48px 回到頂端*/
